deploy: 5a645fe9b0c66981151b9decb4508905ce98862f

--- a/firmware.html
+++ b/firmware.html
@@ -35,7 +35,7 @@
             <label>
                 <input type="radio" name="haOption" value="NoBluetooth" />
                 <div class="name">No Bluetooth</div>
-                <div class="description">Choose this option to disable Bluetooth Proxy which can improve stability of the WiFi connection.</div>
+                <div class="description">Choose this option to disable Bluetooth Proxy and Improv, which can improve stability of the WiFi connection.</div>
             </label>
         </div>
     </div>
